# CampusAutoLogin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEPLOY.md  LICENSE  README.md  _build_msvc.bat  _relink.bat  app.manifest  autostart.go  build_msvc.bat  config.go  go.mod  heartbeat.go  logger.go  login.go  logwidget.go  main.go  network.go  rsrc_windows_amd64.syso  tray.go  ui.go  update.go  version.json
.claude/: settings.local.json
scripts/: build.ps1  package.ps1
src/: main.cpp
src/core/: config_manager.cpp  config_manager.h  crypto_utils.cpp  crypto_utils.h  heartbeat.cpp  heartbeat.h  ip_detector.cpp  ip_detector.h  logger.cpp  logger.h  login_manager.cpp  login_manager.h  network_manager.cpp  network_manager.h
src/ui/: advanced_settings_dialog.cpp  advanced_settings_dialog.h  auto_start.cpp  auto_start.h  main_window.cpp  main_window.h  tray_icon.cpp  tray_icon.h
tests/: test_ip_detector.cpp  test_login_manager.cpp
